--- a/run_file.ipynb
+++ b/run_file.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Useful starting lines\n",
     "%matplotlib inline\n",
@@ -26,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +28,320 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    "
+    "with open('data_/pos_train.txt') as f:\n",
+    "    pos = f.readlines()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data_/neg_train.txt') as f:\n",
+    "    neg = f.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train=pos+neg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_target=[':)']*len(pos)+[':(']*len(neg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>&lt;user&gt; i dunno justin read my mention or not ....</td>\n",
+       "      <td>:)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>because your logic is so dumb , i won't even c...</td>\n",
+       "      <td>:)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>\" &lt;user&gt; just put casper in a box ! \" looved t...</td>\n",
+       "      <td>:)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>&lt;user&gt; &lt;user&gt; thanks sir &gt; &gt; don't trip lil ma...</td>\n",
+       "      <td>:)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>visiting my brother tmr is the bestest birthda...</td>\n",
+       "      <td>:)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199995</th>\n",
+       "      <td>can't wait to fake tan tonight ! hate being pa...</td>\n",
+       "      <td>:(</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199996</th>\n",
+       "      <td>&lt;user&gt; darling i lost my internet connection ....</td>\n",
+       "      <td>:(</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199997</th>\n",
+       "      <td>kanguru defender basic 4 gb usb 2.0 flash driv...</td>\n",
+       "      <td>:(</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199998</th>\n",
+       "      <td>rizan is sad now\\n</td>\n",
+       "      <td>:(</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199999</th>\n",
+       "      <td>no text back ? yea , he mad\\n</td>\n",
+       "      <td>:(</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>200000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     data target\n",
+       "0       <user> i dunno justin read my mention or not ....     :)\n",
+       "1       because your logic is so dumb , i won't even c...     :)\n",
+       "2       \" <user> just put casper in a box ! \" looved t...     :)\n",
+       "3       <user> <user> thanks sir > > don't trip lil ma...     :)\n",
+       "4       visiting my brother tmr is the bestest birthda...     :)\n",
+       "...                                                   ...    ...\n",
+       "199995  can't wait to fake tan tonight ! hate being pa...     :(\n",
+       "199996  <user> darling i lost my internet connection ....     :(\n",
+       "199997  kanguru defender basic 4 gb usb 2.0 flash driv...     :(\n",
+       "199998                                 rizan is sad now\\n     :(\n",
+       "199999                      no text back ? yea , he mad\\n     :(\n",
+       "\n",
+       "[200000 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "full_train={'data':train,\n",
+    "           'target':train_target}\n",
+    "full_train=pd.DataFrame(full_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "train , test=train_test_split(full_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bayes Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(150000, 85007)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extracting features from text files\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "count_vect = CountVectorizer()\n",
+    "X_train_counts = count_vect.fit_transform(train.data)\n",
+    "X_train_counts.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(150000, 85007)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TF-IDF\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "tfidf_transformer = TfidfTransformer()\n",
+    "X_train_tfidf = tfidf_transformer.fit_transform(X_train_counts)\n",
+    "X_train_tfidf.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Machine Learning\n",
+    "# Training Naive Bayes (NB) classifier on training data.\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "clf = MultinomialNB().fit(X_train_tfidf, train.target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "text_clf = Pipeline([('vect', CountVectorizer()), ('tfidf', TfidfTransformer()), ('clf', MultinomialNB())])\n",
+    "\n",
+    "text_clf = text_clf.fit(train.data, train.target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.76782"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "predicted = text_clf.predict(test.data)\n",
+    "np.mean(predicted == test.target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.72406"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import SGDClassifier\n",
+    "text_clf_svm = Pipeline([('vect', CountVectorizer()), ('tfidf', TfidfTransformer()),\n",
+    "                         ('clf-svm', SGDClassifier(loss='hinge', penalty='l2',alpha=1e-3, max_iter=100, random_state=42))])\n",
+    "\n",
+    "text_clf_svm = text_clf_svm.fit(train.data, train.target)\n",
+    "predicted_svm = text_clf_svm.predict(test.data)\n",
+    "np.mean(predicted_svm == test.target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
