added the pre processing fct

--- a/run_file.ipynb
+++ b/run_file.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,18 +27,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[autoreload of pre_processing failed: Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Pont Naomie\\anaconda3\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"C:\\Users\\Pont Naomie\\anaconda3\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 394, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"C:\\Users\\Pont Naomie\\anaconda3\\lib\\imp.py\", line 314, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"C:\\Users\\Pont Naomie\\anaconda3\\lib\\importlib\\__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 604, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 783, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+      "  File \"C:\\Users\\Pont Naomie\\project2-ML\\project2-ML\\pre_processing.py\", line 274, in <module>\n",
+      "    \"execution_count\": null,\n",
+      "NameError: name 'null' is not defined\n",
+      "]\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'pre_process' from 'pre_processing' (C:\\Users\\Pont Naomie\\project2-ML\\project2-ML\\pre_processing.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-b0c13a612aab>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m#rom glove_template import *\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mpickle_vocab\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mpre_processing\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpre_process\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'pre_process' from 'pre_processing' (C:\\Users\\Pont Naomie\\project2-ML\\project2-ML\\pre_processing.py)"
+     ]
+    }
+   ],
    "source": [
     "from cooc import *\n",
     "#rom glove_template import *\n",
-    "from pickle_vocab import *"
+    "from pickle_vocab import *\n",
+    "from pre_processing import pre_process"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,6 +188,50 @@
     "           'target':train_target}\n",
     "full_train=pd.DataFrame(full_train)\n",
     "full_train.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data pre-processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_train=pre_process(full_train)\n",
+    "test_data=pre_process(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##to be done on data with features\n",
+    "\n",
+    "def preprocess(data_X) :\n",
+    "    \"\"\"\n",
+    "    Function:\n",
+    "            for each line in data X, there may be different sizes of features, so normalization is needed for the \n",
+    "            further methods\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    x=data_X.copy()\n",
+    "    x=np.array(x)\n",
+    "    \n",
+    "\n",
+    "    if x.shape[0] > 1 : \n",
+    "        x = np.array([ StandardScaler().fit_transform(line) for line in x ])\n",
+    "    else :\n",
+    "        x = StandardScaler().fit_transform(x)\n",
+    "   \n",
+    "    return x"
    ]
   },
   {
