--- a/Simple_model.ipynb
+++ b/Simple_model.ipynb
@@ -32,7 +32,9 @@
    "source": [
     "from cooc import *\n",
     "#rom glove_template import *\n",
-    "from pickle_vocab import *"
+    "from pickle_vocab import *\n",
+    "from preprocessing import pre_process\n",
+    "from helpers import *"
    ]
   },
   {
@@ -42,14 +44,7 @@
    "outputs": [],
    "source": [
     "# creating training data\n",
-    "with open('twitter-datasets/train_pos.txt') as f:\n",
-    "    pos = f.readlines()\n",
-    "    \n",
-    "with open('twitter-datasets/train_neg.txt') as f:\n",
-    "    neg = f.readlines()\n",
-    "    \n",
-    "train=pos+neg\n",
-    "train_target=[':)']*len(pos)+[':(']*len(neg)"
+    "full_train=load_data()"
    ]
   },
   {
@@ -127,9 +122,6 @@
     }
    ],
    "source": [
-    "full_train={'data':train,\n",
-    "           'target':train_target}\n",
-    "full_train=pd.DataFrame(full_train)\n",
     "full_train.sample(5)"
    ]
   },
