--- a/run_file.ipynb
+++ b/run_file.ipynb
@@ -1930,7 +1930,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Training models with glove "
+    "## Training models with glove "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Logistic Regression"
    ]
   },
   {
@@ -1980,6 +1987,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SVM"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -1997,7 +2011,6 @@
    ],
    "source": [
     "from sklearn.linear_model import SGDClassifier\n",
-    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.feature_extraction.text import TfidfTransformer\n",
     "\n",
@@ -2006,6 +2019,13 @@
     "text_clf_svm = text_clf_svm.fit(X_train, Y_train)\n",
     "predicted_svm = text_clf_svm.predict(X_test)\n",
     "np.mean(predicted_svm == Y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SVC"
    ]
   },
   {
@@ -2069,6 +2089,13 @@
     "#convert smiley to +1, -1\n",
     "Y_train_tr=transform_smiley(Y_train)\n",
     "Y_test_tr= transform_smiley(Y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Random Forest"
    ]
   },
   {
@@ -2155,7 +2182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create submission"
+    "## Create submission"
    ]
   },
   {
