lemmatizer, stemming, stopwords

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -7,7 +7,86 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from nltk.stem.lancaster import LancasterStemmer\n",
+    "from nltk.corpus import stopwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Initializations\n",
+    "\n",
+    "## Initialize Stopwords\n",
+    "stopWords = stopwords.words(\"english\")\n",
+    "## Initialize Stemmer\n",
+    "lancaster_stemmer = LancasterStemmer()\n",
+    "## Initialize Lemmatizer\n",
+    "lmt = nltk.stem.WordNetLemmatizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_stopwords(tweet):\n",
+    "    \"\"\"\n",
+    "    Function: \n",
+    "            filters stopwords from a tweet\n",
+    "    Input:\n",
+    "            tweet as a python string\n",
+    "    Output: \n",
+    "            a stopword-filtered tweet\n",
+    "    \"\"\"\n",
+    "    tokens = tweet.split()\n",
+    "    for word in tokens:\n",
+    "        if word in stopWords:\n",
+    "            tokens.remove(word)\n",
+    "    return ' '.join(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lemmatize(tweet):\n",
+    "    \"\"\"\n",
+    "    Function: \n",
+    "            Lemmatize all words from a tweet one by one\n",
+    "    Input: \n",
+    "            tweet: a tweet as a python string\n",
+    "    Output: \n",
+    "            Lemmatized tweet as a python string.\n",
+    "    \"\"\"\n",
+    "    x = [lemmatize_single(t) for t in tweet.split()]\n",
+    "    return \" \".join(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stemming(tweet):\n",
+    "    \"\"\"\n",
+    "    Function: \n",
+    "            Stemming to all the words from a tweet one by one\n",
+    "    Input: \n",
+    "            tweet as a python string\n",
+    "    Output: \n",
+    "            stemmed tweet as a python string.\n",
+    "    \"\"\"\n",
+    "    x = [stemming_single(t) for t in tweet.split()]\n",
+    "    return \" \".join(x)"
    ]
   },
   {
@@ -26,20 +105,6 @@
     "            tweets as lowercases \n",
     "    \"\"\"\n",
     "    return tweets.str.lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 454,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convert_and(tweets):\n",
-    "    \"\"\"\n",
-    "    Function: converts & to and\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    return tweets.str.replace('&', 'and', regex=True)"
    ]
   },
   {
@@ -92,38 +157,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def filter_user(tweets):\n",
+    "def filter_useless_words(tweets):\n",
     "    \"\"\"\n",
     "    Function: \n",
-    "            Replaces the word '<user>' by an empty string.\n",
-    "    Input: \n",
-    "            tweets \n",
-    "    Output: \n",
-    "            filtered <user>tweets\n",
-    "    \"\"\"\n",
-    "    return tweets.str.replace('<user>', ' ', regex=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 458,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def filter_url(tweets):\n",
-    "    \"\"\"\n",
-    "    Function: \n",
-    "            Replaces the word '<url>' by an empty string.\n",
+    "            Replaces useless words by an empty string.\n",
     "    Input: \n",
     "            tweets as strings\n",
     "    Output: \n",
-    "            filtered <url>tweets\n",
+    "            filtered useless_words-tweets\n",
     "    \"\"\"\n",
-    "    return tweets.str.replace('<url>', ' ', regex=True)"
+    "    tweets=tweets.str.replace('<user>', ' ', regex=True)\n",
+    "    tweets=tweets.str.replace('<url>', ' ', regex=True)\n",
+    "    tweets=tweets.str.replace('rt', ' ', regex=True)\n",
+    "    \n",
+    "    return tweets"
    ]
   },
   {
@@ -142,6 +193,21 @@
     "    Output:\n",
     "            tweets with contractions expanded\n",
     "    \"\"\"\n",
+    "    \n",
+    "    #abreviations\n",
+    "    tweets = tweets.str.replace('im', 'i am', case=False)\n",
+    "    tweets = tweets.str.replace('&', 'and', regex=True)\n",
+    "    tweets = tweets.str.replace('btw', 'by the way', regex=True)\n",
+    "    tweets = tweets.str.replace('oc', 'of course', regex=True)\n",
+    "    tweets = tweets.str.replace('ily', 'i love you', regex=True)\n",
+    "    tweets = tweets.str.replace('ikr', 'i know right', regex=True)\n",
+    "    tweets = tweets.str.replace('idk', 'i don\\'t know', regex=True)\n",
+    "    tweets = tweets.str.replace('dm', 'direct message', regex=True)\n",
+    "    tweets = tweets.str.replace('imo', 'in my opinion', regex=True)\n",
+    "    tweets = tweets.str.replace('nbd', 'no big deal', regex=True)\n",
+    "    tweets = tweets.str.replace('irl', 'in real life', regex=True)\n",
+    "    \n",
+    "    #expand contractions\n",
     "    tweets = tweets.str.replace('n\\'t', ' not', case=False)\n",
     "    tweets = tweets.str.replace('i\\'m', 'i am', case=False)\n",
     "    tweets = tweets.str.replace('\\'re', ' are', case=False)\n",
@@ -155,7 +221,8 @@
     "    tweets = tweets.str.replace('what\\'s', 'what is', case=False)\n",
     "    tweets = tweets.str.replace('who\\'s', 'who is', case=False)\n",
     "    tweets = tweets.str.replace('\\'s', '', case=False)\n",
-    "\n",
+    "    \n",
+    "    \n",
     "    return tweets"
    ]
   },
@@ -245,9 +312,11 @@
     "    data_=convert_to_lowercase(data_)\n",
     "    data_=filter_some_punctuation(data_)\n",
     "    data_=filter_money(data_)\n",
-    "    data_=filter_user(data_)\n",
-    "    data_=filter_url(data_)\n",
+    "    data_=filter_useless_words(data_)\n",
     "    data_=expand_not(data_)\n",
+    "    data_=lemmatize(data_)\n",
+    "    data_=stemming(data_)\n",
+    "    data_=remove_stopwords(data_)\n",
     "    \n",
     "    \n",
     "    #test filter emojis: \n",
