--- a/preprocessing_final.ipynb
+++ b/preprocessing_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +26,12 @@
     "## Initialize Stemmer\n",
     "lancaster_stemmer = LancasterStemmer()\n",
     "## Initialize Lemmatizer\n",
-    "lmt = nltk.stem.WordNetLemmatizer()"
+    "lmt = WordNetLemmatizer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lemmatize_single(w):\n",
+    "    \"\"\"\n",
+    "    DESCRIPTION: \n",
+    "                Lemmatize a single word\n",
+    "    INPUT:  \n",
+    "            w: a word as a python string\n",
+    "    OUTPUT: \n",
+    "            lemmatized word as a python string. In case the word cannot be lemmatized\n",
+    "            it will be returned in its first form.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        a = lmt.lemmatize(w).lower()\n",
+    "        return a\n",
+    "    except Exception as e:\n",
+    "        return w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +107,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stemming_single(word):\n",
+    "    \"\"\"\n",
+    "    DESCRIPTION: \n",
+    "                Apply stemming to a single word\n",
+    "    INPUT: \n",
+    "            w: a word as a python string\n",
+    "    OUTPUT: \n",
+    "            stemmed word as a python string. In case the word cannot be lemmatized\n",
+    "            it will be returned in its first form.\n",
+    "    \"\"\"\n",
+    "    return lancaster_stemmer.stem(word) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,17 +161,18 @@
     "    tweet_emphasized=[]\n",
     "    for w in tweet.split():\n",
     "        if (w in positive_words):\n",
-    "            w = 'positive' + w\n",
+    "            w = ' positive ' + w\n",
     "            tweet_emphasized.append(w) \n",
-    "        else if (w in negative_words):\n",
-    "            w = 'negative'+ w\n",
+    "        elif (w in negative_words):\n",
+    "            w = ' negative '+ w\n",
     "            tweet_emphasized.append(w)\n",
-    "    return (\" \".join(tweet_emphasized)).strip()"
+    "        else: tweet_emphasized.append(w)\n",
+    "    return (\" \".join(tweet_emphasized)).strip()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,19 +395,14 @@
     "    data_=filter_money(data_)\n",
     "    data_=filter_useless_words(data_)\n",
     "    data_=expand_not(data_)\n",
-    "    data_=lemmatize(data_)\n",
-    "    data_=stemming(data_)\n",
-    "    data_=remove_stopwords(data_)\n",
-    "    \n",
-    "    \n",
-    "    #test filter emojis: \n",
-    "    tweets=[\":-] <3 :-p\", \"<3 :-p\"]\n",
-    "    tweets_serie={'data': tweets}\n",
-    "    tweets_df=pd.DataFrame(tweets_serie)\n",
-    "    s=tweets_df.data\n",
+    "\n",
     "    t=[]\n",
     "    for i in data_:\n",
     "        i=emoji_transformation(i)\n",
+    "        i=lemmatize(i)\n",
+    "        i=stemming(i)\n",
+    "        i=emphasize(i)\n",
+    "        i=remove_stopwords(i)\n",
     "        t.append(i)\n",
     "    data_=t\n",
     "\n",
@@ -380,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -414,50 +452,55 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>coucou &lt;smile&gt; &lt;heart&gt;</td>\n",
+       "      <td>positive abound</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>c'est un</td>\n",
+       "      <td>coucou &lt;smile&gt; &lt;heart&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>voici un</td>\n",
+       "      <td>c'est positive un</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>test punctuation</td>\n",
+       "      <td>voic positive un</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>ca coute 35 &lt;money&gt; &lt;money&gt;</td>\n",
+       "      <td>positive test positive punctu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>i am do not</td>\n",
+       "      <td>positive ca negative cout 35 &lt;money&gt; &lt;money&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>positive positive positive positive</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          data\n",
-       "0                       coucou\n",
-       "1       coucou <smile> <heart>\n",
-       "2                     c'est un\n",
-       "3                     voici un\n",
-       "4             test punctuation\n",
-       "5  ca coute 35 <money> <money>\n",
-       "6                  i am do not"
+       "                                           data\n",
+       "0                                        coucou\n",
+       "1                               positive abound\n",
+       "2                        coucou <smile> <heart>\n",
+       "3                             c'est positive un\n",
+       "4                              voic positive un\n",
+       "5                 positive test positive punctu\n",
+       "6  positive ca negative cout 35 <money> <money>\n",
+       "7           positive positive positive positive"
       ]
      },
-     "execution_count": 462,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "check = ['COUCOU', \"Coucou :-] <3\", \"c'est un <user>\", \"voici un <url>\", \"test punctuation ? . @\", \"ca coute 35 $ CHF\", \n",
+    "check = ['COUCOU','abound', \"Coucou :-] <3\", \"c'est un <user>\", \"voici un <url>\", \"test punctuation ? . @\", \"ca coute 35 $ CHF\", \n",
     "        \"i'm don't\"]\n",
     "check_serie={'data': check}\n",
     "check_df=pd.DataFrame(check_serie)\n",
@@ -468,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +552,7 @@
        "0  <smile> <heart> <funnyface>"
       ]
      },
-     "execution_count": 463,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,6 +570,13 @@
     "tweets_df.data=t\n",
     "tweets_df\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
