--- a/preprocessing_final.ipynb
+++ b/preprocessing_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,19 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Load positive and negative words\n",
     "PATH='data/'\n",
     "positive_words=open(PATH+'positive-words.txt').read().strip()\n",
-    "negative_words=open(PATH+'negative_words').read().strip()"
+    "positive_words=positive_words.split()\n",
+    "negative_words=open(PATH+'negative_words.txt').read().strip()\n",
+    "negative_words=negative_words.split()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,156 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def lemmatize_single(w):\n",
-    "    \"\"\"\n",
-    "    DESCRIPTION: \n",
-    "                Lemmatize a single word\n",
-    "    INPUT:  \n",
-    "            w: a word as a python string\n",
-    "    OUTPUT: \n",
-    "            lemmatized word as a python string. In case the word cannot be lemmatized\n",
-    "            it will be returned in its first form.\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        a = lmt.lemmatize(w).lower()\n",
-    "        return a\n",
-    "    except Exception as e:\n",
-    "        return w"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def lemmatize(tweet):\n",
-    "    \"\"\"\n",
-    "    Function: \n",
-    "            Lemmatize all words from a tweet one by one\n",
-    "    Input: \n",
-    "            tweet: a tweet as a python string\n",
-    "    Output: \n",
-    "            Lemmatized tweet as a python string.\n",
-    "    \"\"\"\n",
-    "    x = [lemmatize_single(t) for t in tweet.split()]\n",
-    "    return \" \".join(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def stemming_single(word):\n",
-    "    \"\"\"\n",
-    "    DESCRIPTION: \n",
-    "                Apply stemming to a single word\n",
-    "    INPUT: \n",
-    "            w: a word as a python string\n",
-    "    OUTPUT: \n",
-    "            stemmed word as a python string. In case the word cannot be lemmatized\n",
-    "            it will be returned in its first form.\n",
-    "    \"\"\"\n",
-    "    return lancaster_stemmer.stem(word) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def stemming(tweet):\n",
-    "    \"\"\"\n",
-    "    Function: \n",
-    "            Stemming to all the words from a tweet one by one\n",
-    "    Input: \n",
-    "            tweet as a python string\n",
-    "    Output: \n",
-    "            stemmed tweet as a python string.\n",
-    "    \"\"\"\n",
-    "    x = [stemming_single(t) for t in tweet.split()]\n",
-    "    return \" \".join(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def emphasize(tweet):\n",
-    "    \"\"\"\n",
-    "    Function:\n",
-    "            adds 'positive' or 'negative' to words of tweet if they are in {Positive/Negative}_words \n",
-    "    Input:\n",
-    "            tweet as python string\n",
-    "    Output: \n",
-    "            tweet with words associated to 'positive' or 'negative'\n",
-    "    \"\"\"\n",
-    "    tweet_emphasized=[]\n",
-    "    for w in tweet.split():\n",
-    "        if (w in positive_words):\n",
-    "            w = ' positive ' + w\n",
-    "            tweet_emphasized.append(w) \n",
-    "        elif (w in negative_words):\n",
-    "            w = ' negative '+ w\n",
-    "            tweet_emphasized.append(w)\n",
-    "        else: tweet_emphasized.append(w)\n",
-    "    return (\" \".join(tweet_emphasized)).strip()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convert_to_lowercase(tweets):\n",
-    "    \"\"\"\n",
-    "    Function: \n",
-    "             Converts tweets into lowercases\n",
-    "    Input: \n",
-    "            tweets as strings\n",
-    "    Output: \n",
-    "            tweets as lowercases \n",
-    "    \"\"\"\n",
-    "    return tweets.str.lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def filter_some_punctuation(tweets):\n",
-    "    \"\"\"\n",
-    "    Function:\n",
-    "            deletes some useless punctuation\n",
-    "    Input:\n",
-    "            tweets as strings\n",
-    "    Output:\n",
-    "            tweets with filtered punctuation\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    useless_punct=['.', '?', '@', ',']\n",
-    "    \n",
-    "    for punct in useless_punct:\n",
-    "        tweets=tweets.str.replace(punct, ' ', regex=True)\n",
-    "\n",
-    "    return tweets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,14 +84,84 @@
     "    money_symbols=['$', 'chf', '€']\n",
     "    \n",
     "    for symbol in money_symbols:\n",
-    "        tweets=tweets.str.replace(symbol, '<money>', regex=True)\n",
+    "        tweets=tweets.replace(symbol, '<money>')\n",
     "    \n",
     "    return tweets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def emphasize(tweet):\n",
+    "    \"\"\"\n",
+    "    Function:\n",
+    "            adds 'positive' or 'negative' to words of tweet if they are in {Positive/Negative}_words \n",
+    "    Input:\n",
+    "            tweet as python string\n",
+    "    Output: \n",
+    "            tweet with words associated to 'positive' or 'negative'\n",
+    "    \"\"\"\n",
+    "    tweet_emphasized=[]\n",
+    "    for w in tweet.split():\n",
+    "        if (positive_words.count(w) > 0):\n",
+    "            w_pos = ' positive ' + w\n",
+    "            tweet_emphasized.append(w_pos) \n",
+    "        elif (negative_words.count(w) > 0):\n",
+    "            w_neg = ' negative '+ w\n",
+    "            tweet_emphasized.append(w_neg)\n",
+    "        else:\n",
+    "            tweet_emphasized.append(w)\n",
+    "    return (\" \".join(tweet_emphasized)).strip()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_to_lowercase(tweets):\n",
+    "    \"\"\"\n",
+    "    Function: \n",
+    "             Converts tweets into lowercases\n",
+    "    Input: \n",
+    "            tweets as strings\n",
+    "    Output: \n",
+    "            tweets as lowercases \n",
+    "    \"\"\"\n",
+    "    return tweets.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_some_punctuation(tweets):\n",
+    "    \"\"\"\n",
+    "    Function:\n",
+    "            deletes some useless punctuation\n",
+    "    Input:\n",
+    "            tweets as strings\n",
+    "    Output:\n",
+    "            tweets with filtered punctuation\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    useless_punct=['.', '?', '@', ',']\n",
+    "    \n",
+    "    for punct in useless_punct:\n",
+    "        tweets=tweets.replace(punct, ' ')\n",
+    "\n",
+    "    return tweets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,16 +174,16 @@
     "    Output: \n",
     "            filtered useless_words-tweets\n",
     "    \"\"\"\n",
-    "    tweets=tweets.str.replace('<user>', ' ', regex=True)\n",
-    "    tweets=tweets.str.replace('<url>', ' ', regex=True)\n",
-    "    tweets=tweets.str.replace('rt', ' ', regex=True)\n",
+    "    tweets=tweets.replace('<user>', ' ')\n",
+    "    tweets=tweets.replace('<url>', ' ')\n",
+    "    tweets=tweets.replace('rt', ' ')\n",
     "    \n",
     "    return tweets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,33 +198,37 @@
     "            tweets with contractions expanded\n",
     "    \"\"\"\n",
     "    \n",
-    "    #abreviations\n",
-    "    tweets = tweets.str.replace('im', 'i am', case=False)\n",
-    "    tweets = tweets.str.replace('&', 'and', regex=True)\n",
-    "    tweets = tweets.str.replace('btw', 'by the way', regex=True)\n",
-    "    tweets = tweets.str.replace('oc', 'of course', regex=True)\n",
-    "    tweets = tweets.str.replace('ily', 'i love you', regex=True)\n",
-    "    tweets = tweets.str.replace('ikr', 'i know right', regex=True)\n",
-    "    tweets = tweets.str.replace('idk', 'i don\\'t know', regex=True)\n",
-    "    tweets = tweets.str.replace('dm', 'direct message', regex=True)\n",
-    "    tweets = tweets.str.replace('imo', 'in my opinion', regex=True)\n",
-    "    tweets = tweets.str.replace('nbd', 'no big deal', regex=True)\n",
-    "    tweets = tweets.str.replace('irl', 'in real life', regex=True)\n",
     "    \n",
-    "    #expand contractions\n",
-    "    tweets = tweets.str.replace('n\\'t', ' not', case=False)\n",
-    "    tweets = tweets.str.replace('i\\'m', 'i am', case=False)\n",
-    "    tweets = tweets.str.replace('\\'re', ' are', case=False)\n",
-    "    tweets = tweets.str.replace('it\\'s', 'it is', case=False)\n",
-    "    tweets = tweets.str.replace('that\\'s', 'that is', case=False)\n",
-    "    tweets = tweets.str.replace('\\'ll', ' will', case=False)\n",
-    "    tweets = tweets.str.replace('\\'l', ' will', case=False)\n",
-    "    tweets = tweets.str.replace('\\'ve', ' have', case=False)\n",
-    "    tweets = tweets.str.replace('\\'d', ' would', case=False)\n",
-    "    tweets = tweets.str.replace('he\\'s', 'he is', case=False)\n",
-    "    tweets = tweets.str.replace('what\\'s', 'what is', case=False)\n",
-    "    tweets = tweets.str.replace('who\\'s', 'who is', case=False)\n",
-    "    tweets = tweets.str.replace('\\'s', '', case=False)\n",
+    "    #abreviations\n",
+    "    tweets = tweets.replace('im', 'i am')\n",
+    "    tweets = tweets.replace('&', 'and')\n",
+    "    tweets = tweets.replace('btw', 'by the way')\n",
+    "    tweets = tweets.replace('oc', 'of course')\n",
+    "    tweets = tweets.replace('ily', 'i love you')\n",
+    "    tweets = tweets.replace('ikr', 'i know right')\n",
+    "    tweets = tweets.replace('idk', 'i don\\'t know')\n",
+    "    tweets = tweets.replace('dm', 'direct message')\n",
+    "    tweets = tweets.replace('nbd', 'no big deal')\n",
+    "    tweets = tweets.replace('irl', 'in real life')\n",
+    "    \n",
+    "        #expand contractions\n",
+    "    tweets = tweets.replace('n\\'t', ' not')\n",
+    "    tweets = tweets.replace('don\\'t', ' do not')\n",
+    "    tweets = tweets.replace('i\\'m', 'i am')\n",
+    "    tweets = tweets.replace('\\'re', ' are')\n",
+    "    tweets = tweets.replace('it\\'s', 'it is')\n",
+    "    tweets = tweets.replace('that\\'s', 'that is')\n",
+    "    tweets = tweets.replace('\\'ll', ' will')\n",
+    "    tweets = tweets.replace('\\'l', ' will')\n",
+    "    tweets = tweets.replace('\\'ve', ' have')\n",
+    "    tweets = tweets.replace('\\'d', ' would')\n",
+    "    tweets = tweets.replace('he\\'s', 'he is')\n",
+    "    tweets = tweets.replace('what\\'s', 'what is')\n",
+    "    tweets = tweets.replace('who\\'s', 'who is')\n",
+    "    tweets = tweets.replace('\\'s', '')\n",
+    "\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    \n",
     "    return tweets"
@@ -309,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,20 +316,20 @@
     "    Function:\n",
     "            call all the functions, to avoid having it in 'run_file'\n",
     "    \"\"\"\n",
-    "    \n",
-    "    data_=convert_to_lowercase(data_)\n",
-    "    data_=filter_some_punctuation(data_)\n",
-    "    data_=filter_money(data_)\n",
-    "    data_=filter_useless_words(data_)\n",
-    "    data_=expand_not(data_)\n",
     "\n",
     "    t=[]\n",
     "    for i in data_:\n",
+    "        i=convert_to_lowercase(i)\n",
+    "        i=filter_money(i)\n",
+    "        i=filter_useless_words(i)\n",
+    "        i=filter_some_punctuation(i)\n",
+    "        i=expand_not(i)\n",
     "        i=emoji_transformation(i)\n",
-    "        i=lemmatize(i)\n",
-    "        i=stemming(i)\n",
-    "        i=emphasize(i)\n",
     "        i=remove_stopwords(i)\n",
+    "        #i=lemmatize(i)\n",
+    "        #i=stemming(i)\n",
+    "        i=emphasize(i)\n",
+    "        \n",
     "        t.append(i)\n",
     "    data_=t\n",
     "\n",
@@ -418,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -460,47 +387,47 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>c'est positive un</td>\n",
+       "      <td>is</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>voic positive un</td>\n",
+       "      <td>voici</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>positive test positive punctu</td>\n",
+       "      <td>test punctuation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>positive ca negative cout 35 &lt;money&gt; &lt;money&gt;</td>\n",
+       "      <td>ca coute 35 &lt;money&gt; &lt;money&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>positive positive positive positive</td>\n",
+       "      <td>am not</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                           data\n",
-       "0                                        coucou\n",
-       "1                               positive abound\n",
-       "2                        coucou <smile> <heart>\n",
-       "3                             c'est positive un\n",
-       "4                              voic positive un\n",
-       "5                 positive test positive punctu\n",
-       "6  positive ca negative cout 35 <money> <money>\n",
-       "7           positive positive positive positive"
+       "                          data\n",
+       "0                       coucou\n",
+       "1              positive abound\n",
+       "2       coucou <smile> <heart>\n",
+       "3                           is\n",
+       "4                        voici\n",
+       "5             test punctuation\n",
+       "6  ca coute 35 <money> <money>\n",
+       "7                       am not"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "check = ['COUCOU','abound', \"Coucou :-] <3\", \"c'est un <user>\", \"voici un <url>\", \"test punctuation ? . @\", \"ca coute 35 $ CHF\", \n",
+    "check = ['COUCOU','abound', \"Coucou :-] <3\", \"it's a <user>\", \"voici a <url>\", \"test punctuation ? . @\", \"ca coute 35 $ CHF\", \n",
     "        \"i'm don't\"]\n",
     "check_serie={'data': check}\n",
     "check_df=pd.DataFrame(check_serie)\n",
@@ -511,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +479,7 @@
        "0  <smile> <heart> <funnyface>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,13 +497,6 @@
     "tweets_df.data=t\n",
     "tweets_df\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
